--- a/index.html
+++ b/index.html
@@ -45,5 +45,9 @@
   </div>
 </section>
 </main>
+
+    <script src="./js/menu.js"></script>
+    <script src="./js/modal.js"></script>
+    
 </body>
 </html>
