--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
 </section>
 </main>
 
-    <script src="./js/menu.js"></script>
-    <script src="./js/modal.js"></script>
+    <!-- <script src="./js/menu.js"></script>
+    <script src="./js/modal.js"></script> -->
     
 </body>
 </html>
