--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="container">
     <h2 class="section-title">Заголовок первой секции</h2>
 
-    <ul class="features-set">
+    <ul class="reviews-set">
       <li class="reviews-item">1</li>
       <li class="reviews-item">2</li>
       <li class="reviews-item">3</li>
