Corrects toggle action in btn

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </a>
       <button 
       type="button" 
-      class="menu-button is-open"
+      class="menu-button"
       aria-expanded="false"
       aria-controls="menu-container"
       data-menu-button
@@ -29,7 +29,7 @@
           <use class="icon-menu" href="./img/sprite.svg#menu"></use>
         </svg>
       </button>
-      <div class="menu-container" id="menu-container" data-menu>
+      <div class="menu-container" data-menu id="menu-container" >
         Контент меню
       </div>
     </nav>
