Adds modal mobile modal window

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
   </div>
 </div>
 <main>
+  <div class="container">
+<button type="button" data-modal-open>Открыть</button>
+  </div>
 <section class="section features">
   <div class="container">
     <h2 class="section-title">Заголовок первой секции</h2>
@@ -64,6 +67,17 @@
   </div>
 </section>
 </main>
+<div class="backdrop is-hidden" data-modal>
+  <div class="modal">
+    <button type="button" data-modal-close>Закрыть</button>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta beatae fugiat ullam quod error? Ea magnam, distinctio explicabo ducimus ullam natus sequi, aliquam nihil eligendi repudiandae a amet ipsa earum vel eius, repellat tempore optio autem iure facere suscipit molestiae nemo? Ipsam est sint beatae nobis praesentium tempore voluptas eos!
+    </p>
+  </div>
+</div>
+
+
+
 
     <script src="./js/menu.js"></script>
     <script src="./js/modal.js"></script>
